# gymproject

./: README.md  program.txt
GymProgress/: exercisedbdata.py  mainpage.py  progressGUI.py  testscraper.py
gym-project/: program.txt  pyproject.toml
gym-project/gym_project/: PalGUI.py  exercisedbdata.py  gui.py  guiexample.py  program.py
gymproject/: README.md
gymproject/gym/: main.py  program.py
gymproject/tests/: test_gym_project.py
visualalgo/: settings.gradle.kts
visualalgo/app/: build.gradle.kts
visualalgo/app/src/main/java/visualalgo/: App.java
visualalgo/app/src/main/java/visualalgo/controllers/: AlgorithmController.java
visualalgo/app/src/main/java/visualalgo/views/: AlgorithmOptions.java  Home.java  ViewingGrid.java  mainFrame.java
